Fixed description/share div overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -172,6 +172,7 @@ border-radius: 10px;
 
 /* Search Page */
 .search_result, .store {
+  min-height: 120px;
   width: 100%;
   position: relative;
   margin-bottom: 20px;
